# beacon

./: .gitignore  Dockerfile  Dockerfile.web  README.md  pyproject.toml  startup.py  startup_develop.ipynb
apps/artist_study_app/: pyproject.toml
apps/artist_study_app/src/artist_study_app/: __init__.py  _widget_study_app.py  acknowledgements.py  multi_viewer.py  napari.yaml
example_study/: example_study.yaml
